# fabricant-host

./: .gitignore  README.md  ansbile.cfg  ansible.cfg  ansible_deploy_service.py  ansible_deploy_service.service  become-pass.sh  create_users.yaml  fabricant_users.yaml  fabricant_vms.yaml  playbook.yaml  proxmox.yaml  pyproject.toml  requirements.yml
.github/workflows/: deploy.yml
proxmox/: cluster.fw
proxmox/firewall/: cluster.fw  fabricant-ldap.fw  fabricant-prod.fw  pfsense.fw
