[project]
name = "fabricant-host"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible (>=11.7.0,<12.0.0)",
    "ansible-core (>=2.18.6,<3.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
